--- a/config/bulkadd.html
+++ b/config/bulkadd.html
@@ -49,12 +49,8 @@
 			<br>
 			Each following line should contain the data that corresponds to each of the variables such as:<br>
 			<br>
-			<div style="font-size:120%;margin-left:30px;text-align:left">
-				<pre>
-				6020, Bob Jones, dynamic, peer, 6020, DLPN_Default_DialPlan, yes, 1234, bob@jones.null, yes, yes, mypassword
-				6021, Jane Doe, dynamic, peer, 6021, DLPN_Default_DialPlan, yes, 5678, jane@doe.null, yes, yes, otherpassword
-				</pre>
-			</div>
+			<p style='font-family: monospace, monospace'>6020, Bob Jones, dynamic, peer, 6020, DLPN_Default_DialPlan, yes, 1234, bob@jones.null, yes, yes, mypassword<br>
+			6021, Jane Doe, dynamic, peer, 6021, DLPN_Default_DialPlan, yes, 5678, jane@doe.null, yes, yes, otherpassword</p>
 		</td></tr>
 		<tr><td  align=center>
 			<textarea id='ta_ba_csv' rows=10 cols=120></textarea>
